Fix colours and spacing for NavBar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -276,7 +276,7 @@ a:focus {
   top: 0;
   left: 0;
   right: 0;
-
+  /*  */
   background-color: var(--color-bg);
   z-index: 9999;
 }
@@ -293,13 +293,14 @@ a:focus {
 .navLinkLg {
   font-family: var(--fontFamily-sans);
   padding-left: var(--spacing-2);
+  color: var(--color-text-light);
 }
 
 .navLinkLg {
   font-size: var(--fontSize-3);
-  color: var(--color-primary);
   padding: var(--spacing-4);
 }
+
 .bannerImage {
   position: relative;
   display: inline-block;
@@ -336,8 +337,7 @@ a:focus {
 }
 
 .post-list-item {
-  margin-bottom: var(--spacing-8);
-  margin-top: var(--spacing-8);
+  margin-bottom: var(--spacing-12);
 }
 
 .post-list-item p {
@@ -348,7 +348,7 @@ a:focus {
   font-size: var(--fontSize-4);
   color: var(--color-primary);
   margin-bottom: var(--spacing-2);
-  margin-top: var(--spacing-0);
+  margin-top: 0;
 }
 
 .post-list-item header {
@@ -383,6 +383,7 @@ a:focus {
 
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+  margin-top: var(--spacing-20);
 }
 
 .blog-post header p {
